unpackaged/main/default/objects/Gearset_user__c/Gearset_user__c.object-meta.xml
<CustomObject>
    <label>Gearset user</label>
    <nameField>
        <label>Gearset user Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gearset users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>