unpackaged/main/default/objects/Gearset_user__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>The email of this user, as sourced from the authentication provider used to login. This is what they&#39;ve set it to in their Google Account, or Salesforce profile, or LinkedIn profile</description>
    <inlineHelpText>The email of this user, as sourced from the authentication provider used to login. This is what they&#39;ve set it to in their Google Account, or Salesforce profile, or LinkedIn profile</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>