unpackaged/main/default/objects/Gearset_user__c/fields/Gearset_Team__c.field-meta.xml
<CustomField>
    <fullName>Gearset_Team__c</fullName>
    <description>The Gearset team that this user is active in</description>
    <inlineHelpText>The Gearset team that this user is active in</inlineHelpText>
    <label>Gearset Team</label>
    <referenceTo>Gearset_Team__c</referenceTo>
    <relationshipLabel>Gearset users</relationshipLabel>
    <relationshipName>Gearset_users</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>