unpackaged/main/default/objects/Gearset_user__c/fields/Global_unique_id__c.field-meta.xml
<CustomField>
    <fullName>Global_unique_id__c</fullName>
    <description>An id that is guaranteed to be unique. A mixture of the auth provider id, our database row id, and database region</description>
    <externalId>true</externalId>
    <inlineHelpText>An id that is guaranteed to be unique. A mixture of the auth provider id, our database row id, and database region</inlineHelpText>
    <label>Global unique id</label>
    <length>32</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>