unpackaged/main/default/objects/Gearset_user__c/fields/LoginType__c.field-meta.xml
<CustomField>
    <fullName>LoginType__c</fullName>
    <description>This is how the user logs into this team</description>
    <inlineHelpText>This is how the user logs into this team</inlineHelpText>
    <label>Login Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>SalesforceProd</fullName>
            </value>
            <value>
                <fullName>SalesforceSandbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>