unpackaged/main/default/objects/Gearset_user__c/fields/TeamRole__c.field-meta.xml
<CustomField>
    <fullName>TeamRole__c</fullName>
    <description>The role that the user holds on the team</description>
    <inlineHelpText>The role that the user holds on the team</inlineHelpText>
    <label>Team Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>