unpackaged/main/default/objects/Gearset_user__c/fields/Username__c.field-meta.xml
<CustomField>
    <fullName>Username__c</fullName>
    <description>The authentication provider (Google vs Salesforce vs LinkedIn) username</description>
    <inlineHelpText>The authentication provider (Google vs Salesforce vs LinkedIn) username</inlineHelpText>
    <label>Username</label>
    <length>64</length>
    <type>Text</type>
</CustomField>